[project]
name = "ensembl_converter"
version = "0.0.1"
authors = [
    {name="Lauren Bell", email="bell.laurenmar@gmail.com"},
]
description = "A small package that accesses Biomart via it's API to convert a gene ID to it's symbol"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/LaurenMBell/ensemble_converter/tree/main/src"
